tests/fixtures/invalid/max_float_list.py
# Cannot call max() with Float, List[int]
x = max(1.0, [1, 2, 3])
